--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="indicator_inactive">#E0E0E0</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="creme">#F4F1E1</color>
 </resources>
 
 
