--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,21 +2,24 @@
     <!-- Base application theme. -->
 
     <style name="Base.Theme.Prakriti" parent="Theme.Material3.DayNight.NoActionBar">
-
-
         <!-- Customize your light theme here. -->
         <item name="colorPrimary">@color/primary_green</item>
         <item name="colorPrimaryVariant">@color/text_dark_green</item>
         <item name="colorOnPrimary">@android:color/white</item>
+
+        <!-- Status Bar Configuration -->
+        <item name="android:statusBarColor">@color/primary_green</item>
+        <item name="android:windowLightStatusBar">false</item> <!-- White text/icons on green background -->
     </style>
 
     <style name="Theme.Prakriti" parent="Base.Theme.Prakriti">
-
         <item name="colorPrimary">@color/primary_green</item>
         <item name="colorPrimaryVariant">@color/text_dark_green</item>
         <item name="colorOnPrimary">@android:color/white</item>
+
+        <!-- Ensure status bar is consistent -->
+        <item name="android:statusBarColor">@color/primary_green</item>
+        <item name="android:windowLightStatusBar">false</item>
     </style>
 
-
 </resources>
-
