--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -424,6 +424,7 @@
                             android:layout_marginEnd="12dp" />
 
                         <TextView
+                            android:id="@+id/tips"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
