--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -251,11 +251,11 @@
                         app:cardElevation="2dp"
                         android:background="?attr/selectableItemBackground">
 
-                        <TextView
-                            android:id="@+id/maybe"
+                        <Button
+                            android:id="@+id/contactUs"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Contact Support"
+                            android:text="Contact Us"
                             android:textSize="14sp"
                             android:textStyle="bold"
                             android:clickable="true"
